--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.7"
+
 
 services:
   client:
@@ -11,3 +11,14 @@ services:
     build: ./server
     ports:
       - "5000:5000"
+  postgres:
+    image: bitnami/postgresql
+    container_name: weather_postgres
+    volumes:
+      - "./migrations/postgres:/docker-entrypoint-initdb.d"
+    environment:
+      POSTGRES_PASSWORD: 11111111
+      POSTGRES_DB: weatherdb
+    ports:
+      - "5432:5432"
+    restart: unless-stopped
